--- a/test1.html
+++ b/test1.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Heading 1</h1>
+    <table border="2">
+        <th rowspan="2">Name</th>
+        <th colspan="2">Contact info</th>
+        <tr>
+            <th>Mobile</th>
+            <th>Email</th>
+        </tr>
+        <tbody
+        <tr>
+            <td>Akash</td>
+            <td>6296086478</td>
+            <td>pahariakash19@gmail.com</td>
+        </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">Table footer</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
