--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Heading 1</h1>
-    <table border="2">
+    <table border="2" cellpadding="" cellspacing="5" >
         <th rowspan="2">Name</th>
         <th colspan="2">Contact info</th>
         <tr>
